tests/script/negative/duplicates/dupl-states-in-transition.s
transition initial -> a;
transition a -> {a, a}; // should fail duplication check
transition a -> end;
